// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-password should render with _label="Label" _name="field" _hasCounter=true _maxLength=10 _value="Value" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--has-counter kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" maxlength="10" name="field" type="password" value="Value">
          </div>
        </div>
      </div>
      <div class="kol-form-field__counter">
        <span aria-hidden="true" class="kol-form-field__counter kol-form-field__counter--exceeded" data-testid="input-counter">
          kol-character-counter-current-of-max
        </span>
        <span aria-live="polite" class="visually-hidden" data-testid="input-counter-aria" id="input-password-counter-nonce">
          kol-character-counter-current-of-max-aria
        </span>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _maxLength=10 _value="Value" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-password-character-limit-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" maxlength="10" name="field" type="password" value="Value">
          </div>
        </div>
      </div>
      <span class="visually-hidden" id="input-password-character-limit-hint-nonce">
        kol-character-limit-hint
      </span>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _pattern="[a-z]+" _required=true 1`] = `
<kol-input-password>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--required kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--required" id="input-password-nonce" name="field" pattern="[a-z]+" required="" type="password">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _accessKey="V" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _alert=true 1`] = `
<kol-input-password _alert="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _disabled=true 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--disabled kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input aria-disabled="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _hideLabel=true 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--hide-label kol-input-password password">
      <label class="kol-form-field__label" hidden="" htmlfor="input-password-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-label="Label" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
        <div class="kol-form-field__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content" id="input-password-label-nonce">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Label
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _hint="Hint" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-password-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-password-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _infoPopover={"_label":"Info","_content":"Ich bin ein Hinweis.","_icons":"kolicon-alert-info"} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-popover-button-wc _content="Ich bin ein Hinweis." _hidelabel="" _icons="kolicon-alert-info" _inline="" _label="Info" _variant="ghost">
          <div class="kol-popover-button__popover--styled">
            Ich bin ein Hinweis.
          </div>
        </kol-popover-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-password _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _touched=true 1`] = `
<kol-input-password _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--error kol-form-field--msg-type-error kol-form-field--touched kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-password-msg-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg kol-form-field__msg" id="input-password-msg-nonce" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <div class="kol-alert__content">
          Es ist ein Fehler aufgetreten
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-password-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _readOnly=true 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--read-only kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _shortKey="S" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _touched=true 1`] = `
<kol-input-password _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--touched kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _variant="custom" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--custom kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _variant="visibility-toggle" _value="Value" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-form-field--visibility-toggle kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" type="password" value="Value">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;

exports[`kol-input-password should render with _label="Label" _name="field" _visibilityToggle=true _value="Value" 1`] = `
<kol-input-password _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-form-field kol-input-password password">
      <label class="kol-form-field__label" htmlfor="input-password-nonce" id="input-password-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-password-nonce" name="field" type="password" value="Value">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _icons="kolicon-eye" _label="kol-show-password" buttonvariant="ghost" class="kol-input-container__smart-button kol-input-password__password-toggle-button" data-testid="kol-input-password-toggle-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-password>
`;
